--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       <div class="content">
         <div class="name">Jefferson Snow</div>
         <div class="portfolio">PERSONAL PORTFOLIO</div>
+        <div>
+          <button class="down"><i class="fa fa-long-arrow-down" aria-hidden="true"></i></button>
+        </div>
       </div>
 
     </div>
